fix intro letter spacing for smaller devices

--- a/css/main.css
+++ b/css/main.css
@@ -371,7 +371,8 @@ h2 {
   color: #606060;
   font-family: "Six Caps", sans-serif;
   font-size: 2rem;
-  letter-spacing: 0.3em;
+  font-weight: 400;
+  letter-spacing: 0.15em;
   line-height: 1;
   text-transform: uppercase;
 }
@@ -404,7 +405,8 @@ h2 {
   color: #03AFC2;
   font-family: "Six Caps", sans-serif;
   font-size: 5.5rem;
-  letter-spacing: 0.3em;
+  font-weight: 400;
+  letter-spacing: 0.15em;
   line-height: 1;
   text-transform: uppercase;
   display: block;
